aligned arrow correctly

--- a/sass/elements/_section.sass
+++ b/sass/elements/_section.sass
@@ -17,7 +17,7 @@
     position: absolute
     bottom: 0
     left: 50%
-    margin-left: 82px
+    margin-left: 25px
     margin-bottom: -$gutter/2
     width: 16px
     background: black
